<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="kk"
        android:textSize="30sp"
        android:text="@string/six" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_left"
            style="@style/button_style"

            android:text="@string/_9" />

        <Button
            android:id="@+id/btn_middle"
            style="@style/button_style"

            android:text="@string/_8" />

        <Button
            android:id="@+id/btn_right"
            style="@style/button_style"

            android:text="@string/_7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            style="@style/button_style"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btn2"
            style="@style/button_style"

            android:text="@string/_5" />

        <Button
            android:id="@+id/btn3"
            style="@style/button_style"

            android:text="@string/_4" />

        <Button
            android:id="@+id/btn4"
            style="@style/button_style"

            android:text="@string/_3" />

        <Button
            android:id="@+id/btn5"
            style="@style/button_style"

            android:text="@string/_2" />

        <Button
            android:id="@+id/btn6"
            style="@style/button_style"

            android:text="@string/_1" />

    </LinearLayout>

</LinearLayout>